get login by modal window/ index controller fix

--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -1409,8 +1409,8 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #333;
-    background-color: #fff;
+    /*color: #333;*/
+    /*background-color: #fff;*/
 }
 
 input,
@@ -7286,6 +7286,7 @@ button.close {
     .modal-content {
         -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
         box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+        color: #000 !important;
     }
 
     .modal-sm {
